--- a/pagina2.html
+++ b/pagina2.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Guide - DTL</title>
-  <link rel="icon" type="image/svg+xml" href="Icon4.png" />
+  <!-- <link rel="icon" type="image/svg+xml" href="Icon4.png" />-->
   <script src="https://cdn.tailwindcss.com"></script>
 
   <style>
@@ -333,7 +333,7 @@
 
         <!-- Mobile menu button aligned to the right on small and medium screens; hidden from lg up -->
         <button id="menu-btn" aria-label="Apri menu"
-  class="lg:hidden absolute right-4 top-1/2 -translate-y-1/2 p-2 
+  class="lg:hidden absolute right-4 top-1/2 -translate-y-[17px] mt-1 p-2 
          flex items-center justify-center
          bg-transparent hover:bg-gray-800 rounded z-50">
 
@@ -1285,23 +1285,23 @@ You should take a break. You’ve wasted <strong>too much time here</strong>.</p
   <div class="flex flex-col lg:flex-row items-center justify-start gap-3">
 
     <!-- Colonna X + immagine (icone a sinistra) -->
-    <div class="flex items-center gap-3">
-      <div class="text-red-500 text-4xl leading-none select-none translate-y-[-5px]">❌</div>
+     <div class="flex items-center justify-center md:justify-start gap-3">
+      <div class="text-green-500 text-4xl leading-none select-none lg:ml-3 translate-y-[-5px]">❌</div>
       <img
         src="Grafica1.svg"
         alt="Phone mockup"
-        class="h-auto max-w-[300px] object-contain select-none mt-2 sm:mt-0"
+        class="w-full max-w-[260px] sm:max-w-[300px] h-auto object-contain select-none"
         loading="lazy"
       />
     </div>
 
     <!-- Colonna ✓ + immagine (icone a sinistra) -->
-    <div class="flex items-center gap-3">
+     <div class="flex items-center justify-center md:justify-start gap-3">
       <div class="text-green-500 text-4xl leading-none select-none lg:ml-3 translate-y-[-5px]">✅</div>
       <img
         src="Grafica2.svg"
         alt="Phone mockup"
-        class="h-auto max-w-[300px] object-contain select-none mt-2 lg:mt-0"
+        class="w-full max-w-[260px] sm:max-w-[300px] h-auto object-contain select-none"
         loading="lazy"
       />
     </div>
