--- a/tesi.html
+++ b/tesi.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Thesis</title>
-  <link rel="icon" type="image/svg+xml" href="Icon4.png" />
+  <!-- <link rel="icon" type="image/svg+xml" href="Icon4.png" /> -->
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-white text-gray-900">
@@ -28,7 +28,7 @@
 
         <!-- Mobile menu button aligned to the right on small and medium screens; hidden from lg up -->
         <button id="menu-btn" aria-label="Apri menu"
-  class="lg:hidden absolute right-4 top-1/2 -translate-y-1/2 p-2 
+  class="lg:hidden absolute right-4 top-1/2 -translate-y-[13px] p-2 
          flex items-center justify-center
          bg-transparent hover:bg-gray-800 rounded z-50">
 
