--- a/contatti.html
+++ b/contatti.html
@@ -14,7 +14,7 @@
     <div class="container mx-auto px-8 lg:px-2 ">
       <div class="grid grid-cols-12 items-center h-20 gap-10">
         <a href="index.html" class="col-span-6 lg:col-span-3 flex items-center space-x-2">
-        <h1 class="sm:block text-2xl md:text-4xl font-semibold leading-tight tracking-tight whitespace-nowrap text-yellow-300">Design Transparency Labels</h1>
+        <h1 class="sm:block text-2xl md:text-4xl font-semibold leading-tight tracking-tight whitespace-nowrap text-yellow-300 lg:px-8">Design Transparency Labels</h1>
         </a>
 
         <div id="nav-link-group" class="grid col-span-6 lg:col-start-9 lg:col-span-4 space-x-4 sm:space-x-6 md:space-x-8 lg:space-x-16 hidden lg:flex ">
