--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="grid grid-cols-12 items-center h-20 gap-10">
         <a href="index.html" class="col-span-6 lg:col-span-3 flex items-center space-x-2">
           <!--<img src="logo.svg" alt="Logo" class="w-8 h-8">-->
-        <h1 class="sm:block text-2xl md:text-4xl font-semibold leading-tight tracking-tight whitespace-nowrap text-yellow-300">Design Transparency Labels</h1>
+        <h1 class="sm:block text-2xl md:text-4xl font-semibold leading-tight tracking-tight whitespace-nowrap text-yellow-300 lg:px-8">Design Transparency Labels</h1>
         </a>
 
         <!-- Desktop link group: place it in the same columns as the aside (starts at col 10) -->
@@ -68,7 +68,7 @@
 
   <!-- HERO SECTION -->
   <main class="relative z-[10] pt-24 md:pt-14 lg:pt-14 pb-16">
-    <div class="container mx-auto px-8 lg:px-2 grid grid-cols-1 md:grid-cols-12 gap-10">
+    <div class="container mx-auto px-8 grid grid-cols-1 md:grid-cols-12 gap-10">
 
       <!-- TESTO -->
       <div class="md:col-span-12 lg:col-span-8 md:mt-14">
