--- a/tesi.html
+++ b/tesi.html
@@ -16,7 +16,7 @@
       <div class="grid grid-cols-12 items-center h-20 gap-10">
         <a href="index.html" class="col-span-6 lg:col-span-3 flex items-center space-x-2">
           <!--<img src="logo.svg" alt="Logo" class="w-8 h-8">-->
-        <h1 class="sm:block text-2xl md:text-4xl font-semibold leading-tight tracking-tight whitespace-nowrap text-yellow-300">Design Transparency Labels</h1>
+        <h1 class="sm:block text-2xl md:text-4xl font-semibold leading-tight tracking-tight whitespace-nowrap text-yellow-300 lg:px-8">Design Transparency Labels</h1>
         </a>
 
         <!-- Desktop link group: place it in the same columns as the aside (starts at col 10) -->
