--- a/tesi.html
+++ b/tesi.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Thesis</title>
   <!-- <link rel="icon" type="image/svg+xml" href="Icon4.png" /> -->
-  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="tailwind.css" />
 </head>
 <body class="bg-white text-gray-900">
 
