--- a/pagina2.html
+++ b/pagina2.html
@@ -431,7 +431,7 @@
       <img
         src="Target1.svg"
         alt="Phone mockup"
-        class="w-full max-w-[260px] sm:max-w-[300px] h-auto object-contain select-none"
+        class="w-full max-w-[260px] md:max-w-[300px] h-auto object-contain select-none"
         loading="lazy"
       />
     </div>
@@ -444,7 +444,7 @@
       <img
         src="Target2.png"
         alt="Phone mockup"
-        class="w-full max-w-[260px] sm:max-w-[300px] h-auto object-contain select-none"
+        class="w-full max-w-[260px] md:max-w-[300px] h-auto object-contain select-none"
         loading="lazy"
       />
     </div>
@@ -1290,7 +1290,7 @@ You should take a break. You’ve wasted <strong>too much time here</strong>.</p
       <img
         src="Grafica1.svg"
         alt="Phone mockup"
-        class="w-full max-w-[260px] sm:max-w-[300px] h-auto object-contain select-none"
+        class="w-full max-w-[260px] md:max-w-[300px] h-auto object-contain select-none"
         loading="lazy"
       />
     </div>
@@ -1301,7 +1301,7 @@ You should take a break. You’ve wasted <strong>too much time here</strong>.</p
       <img
         src="Grafica2.svg"
         alt="Phone mockup"
-        class="w-full max-w-[260px] sm:max-w-[300px] h-auto object-contain select-none"
+        class="w-full max-w-[260px] md:max-w-[300px] h-auto object-contain select-none"
         loading="lazy"
       />
     </div>
